/* Komopopsa nanga osoafdaki */

--- a/Kownukronsneki.mw
+++ b/Kownukronsneki.mw
@@ -34,10 +34,10 @@ A Kownukronsneki abi difrenti sortu sneki tapu en nyangtafra soleki  tra kronsne
  
 
 
-== Komopopsa nanga osoafdaki ==
+== Kmopopsa nanga osoafdaki ==
 ________________________________________________________________________________________________
 
-A Kownukronsneki komopopsa ini prati fu Zuidsei-Oostsei-Azië; India, Vietnam, Ondrosei-China, Maleisië, Indonesië èn a Filipijnen, no ini Sri-Lanka.
+A Kownukronsneki kmopopsa ini prati fu Zuidsei-Oostsei-Azië; India, Vietnam, Ondrosei-China, Maleisië, Indonesië èn a Filipijnen, no ini Sri-Lanka.
 A osoafdaki delibi fu  drei tumsi owktu natnati kontren ,nomo no ini afudreisabana soleki a Kronsneki fu Egipte(Naja haje),nomo ini bosubusi, weisabana èn bosubosisyoro nanga ipi pranibosi. Ini dyèns te a basyaalasortu a sneki disi noiti no kren wan bon- owktu fu netirostu  noiti. 
 ________________________________________________________________________________________________
 
