--- a/Kownukronsneki.mw
+++ b/Kownukronsneki.mw
@@ -38,11 +38,13 @@ A Kownukronsneki abi difrenti sortu sneki tapu en nyangtafra soleki  tra kronsne
 ________________________________________________________________________________________________
 
 A Kownukronsneki kmopopsa ini prati fu Zuidsei-Oostsei-Azië; India, Vietnam, Ondrosei-China, Maleisië, Indonesië èn a Filipijnen, no ini Sri-Lanka.
-A osoafdaki delibi fu  drei tumsi owktu natnati kontren ,nomo no ini afudreisabana soleki a Kronsneki fu Egipte(Naja haje),nomo ini bosubusi, weisabana èn bosubosisyoro nanga ipi pranibosi. Ini dyèns te a basyaalasortu a sneki disi noiti no kren wan bon- owktu fu netirostu  noiti. 
+A osoafdaki delibi fu  drei tumsi owktu natnati kontren ,nomo no ini afudreisabana soleki a Kronsneki fu Egipte(Naja haje),nomo ini bosubusi, weisabana èn bosubosisyoro nanga ipi pranibosi. Ini dyèns te a basyaalasortu a sneki disi noiti no kren wan bon- owktu fu netirostu  noiti.
+ 
 ________________________________________________________________________________________________
 
+
 Tra links:
-[[Daguwesneki]]
+* [[Daguwesneki]]
 
 [[ar:الكوبرا الملك]]
 [[az:Kral kobrası]]
