--- a/Daguwesneki.mw
+++ b/Daguwesneki.mw
@@ -14,10 +14,10 @@ A Daguwesneki nomo (Gadosneki)de wan bun krenmeti di abratyari wan bigi pisi fu 
 _____________________________________________________________________________________________
 
 A Daguwesneki abi wan langa nanga finfini skin, nomo tranga sote fusanede a basyanomru spirtitei.
-A sneki kan wegi moro dan wan tyawa kilo èn awinsi fa a bun flèxifasi a kondrekrasmeti no di bribrib sote. Fusanede a bigi panyakontren wan biginumru klurukenkidifrenti biginopo nomo a no ala anganangamakandra nanga wan ondrosortu.
-Sonwan ondrosortu sabi lontunangana feifi difrenti klurukenidifrenti, nanga kluru leki redi, geri, grun, weti, broin èn braka.
+A sneki kan wegi moro dan wan tyawa kilo èn awinsi fa a bun flèxifasi a kondrekrasmeti no di bribrib sote. Fusanede a bigi panyakontren wan biginumru klorukenkidifrenti biginopo nomo a no ala anganangamakandra nanga wan ondrosortu.
+Sonwan ondrosortu sabi lontunangana feifi difrenti klorukenidifrenti, nanga kloru leki redi, geri, grun, weti, broin èn braka.
 A rediteredaguwe(gadosneki) efu papasneki de moro powpi.
-di abi wan letibroin kluru nanga wan krin dungrubroin te redi terekba. A disi ondrosortu man tuka tapu Sranankondre.
+di abi wan letibroin kloru nanga wan krin dungrubroin te redi terekba. A disi ondrosortu man tuka tapu Sranankondre.
 
 == Nyansani ==
 _______________________________________________________________________________________________
