--- a/Kownukronsneki.mw
+++ b/Kownukronsneki.mw
@@ -6,10 +6,10 @@ ________________________________________________________________________________
 == Sabimarki ==
 _____________________________________________________________________________________________
 
-A Kownukronsneki gro te nokulangafasi 5,8 mitri, ipi eksemprepisi tapu grontapu de mindri 3,5 èn 4,5 mitri langa. Solikifa ipi Kronsneki disi wan abi den karaktrimarki a powpi  seifesiflebeflebe boiti a ede fu en.
-A kluru de broin te braka nanga basyaala wan leti sprepi tapu a bakabonyo fu a heri skin. 
+A Kownukronsneki gro te nokulangafasi 5,8 mitri, ipi eksemprepisi tapu grontapu de mindri 3,5 èn 4,5 mitri langa. Solikifa ipi Kronsneki disi wan abi den karaktrimarki a powpi seifesiflebeflebe boiti a ede fu en.
+A kloru de broin te braka nanga basyaala wan leti sprepi tapu a bakabonyo fu a heri skin. 
 A bere fu a Kownukronsneki de weti nanga brakaflaka, espresi fu a kanti fu a seifesiflebeflebe.
- 
+
 == Alasabi ==
 ________________________________________________________________________________________________
 
