Dedemanuma A '''braka dedemanuma'''(''Latrodectus mactans'')de wan anansi fu komopo fu a zuidseioostenei fua noordsei-Amerkan nanga Mexico, nomo en panya ensrefi abra ala grontapupisi. A fosfosiwan eksemprepisi konnasyoro tapu Europa ini Tervuren Bel

--- a/Dedemanuma.mw
+++ b/Dedemanuma.mw
@@ -1,6 +1,7 @@
 A '''braka dedemanuma'''(''Latrodectus mactans'')de wan anansi fu komopo fu a zuidseioostenei fua noordsei-Amerkan nanga Mexico, nomo en panya ensrefi abra ala grontapupisi. A fosfosiwan eksemprepisi konnasyoro tapu Europa ini Tervuren België) ini 1967.
 A luktusortu ini Nederland nanga België no de switifiti sote fu a anansi ankra ensrefi fu tan. A dedemanuma anansi, di meki pisi fu a kugruanansi famiri èn kan gro te luntunagana 1,5 cm bigi, a de fruala powpi bika a uma fu a dedemanuma kan beti ogri nanga sonleisi abitere trangaseryusu
 
+[[Combowortu]]
 
 [[nl:zwarte weduwe]]
 [[en:black widow]]
