'''Kruktutere''' noso sèmwortusrefi [''Dundrutere''] (Buthus occitanus)A wan orde fu morofutufasi meti sa angasèmnanga a grupu fu anansisoleki. Kruktutere angasèmnanga a basyaowru powpi anansisoleki èn ben de an  moro pringrani ini a gruppu disi.

--- a/Kruktutere.mw
+++ b/Kruktutere.mw
@@ -1,5 +1,11 @@
 '''Kruktutere''' noso sèmwortusrefi [''Dundrutere''] (Buthus occitanus)A wan orde fu morofutufasi meti sa angasèmnanga a grupu fu anansisoleki. Kruktutere angasèmnanga a basyaowru powpi anansisoleki èn ben de an  moro pringrani ini a gruppu disi.
 
+Den '''Kruktutere''' noso ''Dundrutere'' ben delibi lontunangana tinnaaitihondro trafasisortu èn ipi prindedekiri sortu, den 'prindedekiri sortu' de powpi fua stondedemarki.Lontunangana alamala Kruktutere ben gersi soleki makandra, èn a dangrafromu fu bruyafromu den nanga trawan krasmeti.
+A Kruktutere de fua soso wanwan grupu fu krasmeti fuab frikeftiklepfaki inisosrefi naitikisoleki
+indresikwinsi-wrokosani fuakbatere, a tere disi de langa nanga flèksi è a meki wan pisi fu a herheri bakaskin.
+
+
+
 
 
 
