--- a/Daguwesneki.mw
+++ b/Daguwesneki.mw
@@ -6,7 +6,7 @@ ________________________________________________________________________________
 == kmopopsa nanga osoafdaki ==
 _____________________________________________________________________________________________
 
-A Daguwesneki kmopopsa ini wan bigi nomru fu kondre ini wan bigi pisi fu Zuidsei- nanga Mindrisei-Amerkan; Argentina, Belize, Bolivia, Brasyon, Colombia, Costa Rica, Dominica, Ecuador, El Salvador, Frans-Guyana, Guatemala, Guyana, Honduras, Mexico, Nicaragua, Panama, Paraguay, Peru, Saint Lucia, Sranankondre, Trinidad en Tobago en Venezuela. Fusanede a bigibigi panyakontren a de na ipi ondrosortu, luntonangana tin, dati alamala libi ini frafra defrenti libibirtikontrin.
+A Daguwesneki kmopopsa ini wan bigi nomru fu kondre ini wan bigi pisi fu Zuidsei- nanga Mindrisei-Amerkan; Argentina, Belize, Bolivia, Brasyon, Colombia, Costa Rica, Dominica, Ecuador, El Salvador, Frans-Guyana, Guatemala, Guyana, Honduras, Mexico, Nicaragua, Panama, Paraguay, Peru, Saint Lucia, Sranankondre, Trinidad en Tobago en Venezuela. Fusanede a bigibigi panyakontren ae na ipi ondrosortu, luntonangana tin, dati alamala libi ini frafra defrenti libibirtikontrin.
 A basyanomru eksemprepisi libi ini natnati nanga waran, waranbusi alenbusi, sonwan ondrosortu ini san frafradrei lontustantori tapu a eilanti. 
 A Daguwesneki nomo (Gadosneki)de wan bun krenmeti di abratyari wan bigi pisi fu en libi ini wan bon, luru na en katibo efu de ini rostu.
 
