A '''Daguwesneki''' (Boa constrictor)de wan te dri mitri langa tyokrosneki fu a papasneki nomo gadosneki famiri(Boidae).A de wan fu a pikinso kowrubrudu bubaskinsortu pefu a lerisabifasi nen 'Boa constrictor' alasabifasi de èn owktu 'Nederlandse' ne

--- a/Daguwesneki.mw
+++ b/Daguwesneki.mw
@@ -1,3 +1,7 @@
+[[Gefre:http://stonierpage.wikispaces.com/file/view/boa_constrictor.jpg/30656204/boa_constrictor.jpg.png|thumb|Daguwesneki]]
+
+
+
 A '''Daguwesneki''' (Boa constrictor)de wan te dri mitri langa tyokrosneki fu a papasneki nomo gadosneki famiri(Boidae).A de wan fu a pikinso kowrubrudu bubaskinsortu pefu a lerisabifasi nen 'Boa constrictor' alasabifasi de èn owktu 'Nederlandse' nen tron kebroiki. 
 Abra a buskondresma anbegi en nanga a Inca's grani en leki en de wan fu a moro santa meti, Fudrape a nen '''Gado'''''sneki'' kmopope.
 ________________________________________________________________________________________________
