A '''Daguwesneki''' (Boa constrictor)de wan te dri mitri langa tyokrosneki fu a papasneki nomo gadosneki famiri(Boidae).A de wan fu a pikinso kowrubrudu bubaskinsortu pefu a lerisabifasi nen 'Boa constrictor' alasabifasi de èn owktu 'Nederlandse' ne

--- a/Daguwesneki.mw
+++ b/Daguwesneki.mw
@@ -1,4 +1,6 @@
-[[Gefre:http://stonierpage.wikispaces.com/file/view/boa_constrictor.jpg/30656204/boa_constrictor.jpg.png|thumb|Daguwesneki]]
+
+[[File:Boa-Constrictor-Imperator-Belize-Zoo.jpg|thumb|right|250px|Daguwesneki ede]]
+
 
 
 
