--- a/Daguwesneki.mw
+++ b/Daguwesneki.mw
@@ -1,7 +1,4 @@
 
-[[File:Boa-Constrictor-Imperator-Belize-Zoo.jpg|thumb|right|250px|Daguwesneki ede]]
-
-
 
 
 A '''Daguwesneki''' (Boa constrictor)de wan te dri mitri langa tyokrosneki fu a papasneki nomo gadosneki famiri(Boidae).A de wan fu a pikinso kowrubrudu bubaskinsortu pefu a lerisabifasi nen 'Boa constrictor' alasabifasi de èn owktu 'Nederlandse' nen tron kebroiki. 
@@ -16,7 +13,8 @@ A Daguwesneki kmopopsa ini wan bigi nomru fu kondre ini wan bigi pisi fu Zuidsei
 A basyanomru eksemprepisi libi ini natnati nanga waran, waranbusi alenbusi, sonwan ondrosortu ini san frafradrei lontustantori tapu a eilanti. 
 A Daguwesneki nomo (Gadosneki)de wan bun krenmeti di abratyari wan bigi pisi fu en libi ini wan bon, luru na en katibo efu de ini rostu.
 
-== Lontuskrifi ==
+== Lontuskrifi ==  [[File:Boa-Constrictor-Imperator-Belize-Zoo.jpg|thumb|right|250px|Daguwesneki ede]]
+
 _____________________________________________________________________________________________
 
 A Daguwesneki abi wan langa nanga finfini skin, nomo tranga sote fusanede a basyanomru spirtitei.
