A '''Daguwesneki''' (Boa constrictor)de wan te dri mitri langa tyokrosneki fu a papasneki nomo gadosneki famiri(Boidae).A de wan fu a pikinso kowrubrudu bubaskinsortu pefu a lerisabifasi nen 'Boa constrictor' alasabifasi de èn owktu 'Nederlandse' ne

--- a/Daguwesneki.mw
+++ b/Daguwesneki.mw
@@ -1,6 +1,5 @@
 
 
-
 A '''Daguwesneki''' (Boa constrictor)de wan te dri mitri langa tyokrosneki fu a papasneki nomo gadosneki famiri(Boidae).A de wan fu a pikinso kowrubrudu bubaskinsortu pefu a lerisabifasi nen 'Boa constrictor' alasabifasi de èn owktu 'Nederlandse' nen tron kebroiki. 
 Abra a buskondresma anbegi en nanga a Inca's grani en leki en de wan fu a moro santa meti, Fudrape a nen '''Gado'''''sneki'' kmopope.
 ________________________________________________________________________________________________
@@ -13,9 +12,9 @@ A Daguwesneki kmopopsa ini wan bigi nomru fu kondre ini wan bigi pisi fu Zuidsei
 A basyanomru eksemprepisi libi ini natnati nanga waran, waranbusi alenbusi, sonwan ondrosortu ini san frafradrei lontustantori tapu a eilanti. 
 A Daguwesneki nomo (Gadosneki)de wan bun krenmeti di abratyari wan bigi pisi fu en libi ini wan bon, luru na en katibo efu de ini rostu.
 
-== Lontuskrifi ==  [[File:Boa-Constrictor-Imperator-Belize-Zoo.jpg|thumb|right|250px|Daguwesneki ede]]
+== Lontuskrifi ==  _____________________________________________________________________________________________[[File:Boa-Constrictor-Imperator-Belize-Zoo.jpg|thumb|right|250px|Daguwesneki ede]]
 
-_____________________________________________________________________________________________
+
 
 A Daguwesneki abi wan langa nanga finfini skin, nomo tranga sote fusanede a basyanomru spirtitei.
 A sneki kan wegi moro dan wan tyawa kilo èn awinsi fa a bun flèxifasi a kondrekrasmeti no di bribrib sote. Fusanede a bigi panyakontren wan biginumru klorukenkidifrenti biginopo nomo a no ala anganangamakandra nanga wan ondrosortu.
