A '''Daguwesneki''' (Boa constrictor)de wan te dri mitri langa tyokrosneki fu a papasneki nomo gadosneki famiri(Boidae).A de wan fu a pikinso kowrubrudu bubaskinsortu pefu a lerisabifasi nen 'Boa constrictor' alasabifasi de èn owktu 'Nederlandse' ne

--- a/Daguwesneki.mw
+++ b/Daguwesneki.mw
@@ -1,3 +1,34 @@
+{{Taxobox
+| image = Boa constrictor, Vaňkovka, Brno (2).jpg
+| regnum = [[Animalia]]
+| phylum = [[Chordata]]
+| subphylum = [[Vertebrata]]
+| classis = [[Reptilia]]
+| ordo = [[Squamata]]
+| subordo = [[Serpentes]]
+| familia = [[Boidae]]
+| subfamilia = [[Boinae]]
+| genus = ''[[Boa (genus)|Boa]]''
+| species = '''''B. constrictor'''''
+| binomial = ''Boa constrictor''
+| binomial_authority = [[Carolus Linnaeus|Linnaeus]], 1758
+| synonyms = * [''Boa''] ''Constrictor''—Linnaeus, 1758
+* [''Boa''] ''Orophias''—Linnaeus, 1758
+* ''Constrictor formosissimus''—Laurenti, 1768
+* ''Constrictor rex serpentum''—Laurenti, 1768
+* ''Constrictor auspex''—Laurenti, 1768
+* ''Constrictor diviniloquus''—Laurenti, 1768
+* ''Constrictor orophias''—Laurenti, 1768
+* [''Boa''] ''constrictrix''—Schneider, 1801
+* ''Boa diviniloqua''—A.M.C. Duméril & Bibron, 1844
+* ''Boa constrictor''—Boulenger, 1893
+* ''Boa diviniloqua''—Boulenger, 1893
+* ''Constrictor constrictor''—Griffin, 1916
+* ''Constrictor constrictor constrictor''—Stull, 1935
+* ''Boa constrictor constrictor''—Forcart, 1951<ref name="McD99"/>
+}}
+
+
 
 
 A '''Daguwesneki''' (Boa constrictor)de wan te dri mitri langa tyokrosneki fu a papasneki nomo gadosneki famiri(Boidae).A de wan fu a pikinso kowrubrudu bubaskinsortu pefu a lerisabifasi nen 'Boa constrictor' alasabifasi de èn owktu 'Nederlandse' nen tron kebroiki. 
