*Empty MediaWiki Message*

--- a/Kruktutere.mw
+++ b/Kruktutere.mw
@@ -20,4 +20,83 @@ indresikwinsi-wrokosani fuakbatere, a tere disi de langa nanga flèksi è a meki
 
 
 
-[[Combowortu]]
+
+[[ar:عقرب]]
+[[an:Scorpiones]]
+[[ay:Ajarankhu]]
+[[az:Əqrəblər]]
+[[bn:বৃশ্চিক (কাঁকড়াবিছে)]]
+[[be:Скарпіёны]]
+[[bs:Škorpija]]
+[[br:Krug]]
+[[bg:Скорпиони]]
+[[ca:Escorpí]]
+[[cs:Štíři]]
+[[cy:Sgorpion]]
+[[da:Skorpion]]
+[[de:Skorpione]]
+[[nv:Séigoʼ]]
+[[et:Skorpionilised]]
+[[el:Σκορπιός (αρθρόποδο)]]
+[[en:Scorpion]]
+[[es:Scorpiones]]
+[[eo:Skorpio]]
+[[eu:Scorpiones]]
+[[fa:کژدم]]
+[[fr:Scorpiones]]
+[[gl:Escorpión]]
+[[gan:剪人蟲]]
+[[ko:전갈]]
+[[hi:बिच्छू]]
+[[hr:Štipavci]]
+[[io:Skorpiono]]
+[[id:Kalajengking]]
+[[it:Scorpiones]]
+[[he:עקרבאים]]
+[[jv:Kalajengking]]
+[[kn:ಚೇಳು, ವೃಶ್ಚಿಕ]]
+[[ka:მორიელები]]
+[[sw:Nge]]
+[[ku:Dûpişk]]
+[[la:Scorpiones]]
+[[lv:Skorpioni]]
+[[lt:Skorpionai]]
+[[hu:Skorpiók]]
+[[mk:Скорпија]]
+[[mg:Maingoka]]
+[[ml:തേൾ]]
+[[ms:Kala jengking]]
+[[cdo:Kiék]]
+[[my:ကင်းမြီးကောက်]]
+[[nah:Colōtl]]
+[[nl:Schorpioenen]]
+[[ne:बिच्छी]]
+[[ja:サソリ]]
+[[no:Skorpioner]]
+[[nn:Skorpionar]]
+[[oc:Scorpiones]]
+[[pl:Skorpiony]]
+[[pt:Escorpião]]
+[[ro:Scorpion]]
+[[qu:Sira-sira]]
+[[ru:Скорпионы]]
+[[sq:Akrepi]]
+[[scn:Scurpiuni]]
+[[sk:Šťúry]]
+[[sl:Ščipalci]]
+[[so:Dabaqaroof]]
+[[sr:Скорпије]]
+[[sh:Škorpion]]
+[[fi:Skorpionit]]
+[[sv:Skorpioner]]
+[[tl:Alakdan]]
+[[ta:தேள்]]
+[[te:తేలు]]
+[[th:แมงป่อง]]
+[[tg:Каждум]]
+[[tr:Akrep]]
+[[uk:Скорпіони]]
+[[vi:Bọ cạp]]
+[[wa:Scoirpion]]
+[[zh-yue:蠍子]]
+[[zh:蠍子]]
