--- a/Kruktutere.mw
+++ b/Kruktutere.mw
@@ -1,3 +1,15 @@
+{{Taxobox
+| color = pink
+| name = Scorpions
+| image = Black_scorpion.jpg
+| image_caption = A black scorpion
+| regnum = [[Animal]]ia
+| phylum = [[Arthropod]]a
+| classis = [[Arachnid]]a
+| ordo = '''Scorpiones'''
+}}
+
+
 '''Kruktutere''' noso sèmwortusrefi [''Dundrutere''] (Buthus occitanus)A wan orde fu morofutufasi meti sa angasèmnanga a grupu fu anansisoleki. Kruktutere angasèmnanga a basyaowru powpi anansisoleki èn ben de an  moro pringrani ini a gruppu disi.
 
 Den '''Kruktutere''' noso ''Dundrutere'' ben delibi lontunangana tinnaaitihondro trafasisortu èn owktu den abi ipi prindedekiri famiri sortu, den 'prindedekiri sortu' de powpi fua stondedemarki.Lontunangana alamala Kruktutere ben gersi soleki makandra, èn a dangrafromu fu bruyafromu den nanga trawan krasmeti.
