--- a/Kownukronsneki.mw
+++ b/Kownukronsneki.mw
@@ -21,7 +21,7 @@ Ini disi nesi den boro tutenti te fotenti eksi, trufu  e kon abrabaka siksitenti
 == Frikeftifasi ==
 ______________________________________________________________________________________________
 
-Faonomo a sortu disi no wanleisi frumeki a morotranga frikefti, Moro frikefti de a ''Taipan''  (''Oxyuranus microlepidotus''), a sneki disi inidresikwinsi angananga beti wan bigi ominifasi dati kan kiri wan nodresiyepisma; Nofotron a ominifasi dresikwinsi de kandede soleki fu tutenti libisma sosrefi. A sneki disi ne frede fu libisma, èn draienbaka labisma no musu ben frede fu a sneki disi(Taipan). Libisma no de kefalek fu a bigi sneki disi.Luktudisi a kronskeni disi konnasyoro basyaala alafasi.Moksi kon na wan a meti disi streikibri ensrefi wantron, èn a o lowe franoiti. Efu te a sneki gwe a no meki esigaw. Kofurai na wan takrudu Kronsneki ini a birti de tan pi tiri tnapu, truabra a sneki tron safri ensrefi; dati de a momenti fu libi a meti kodososo.
+Faonomo a sortu disi no wanleisi frumeki a basyatranga frikefti, Moro frikefti de a ''Taipan''  (''Oxyuranus microlepidotus''), a sneki disi inidresikwinsi angananga beti wan bigi ominifasi dati kan kiri wan nodresiyepisma; Nofotron a ominifasi dresikwinsi de kandede soleki fu tutenti libisma sosrefi. A sneki disi ne frede fu libisma, èn draienbaka labisma no musu ben frede fu a sneki disi(Taipan). Libisma no de kefalek fu a bigi sneki disi.Luktudisi a kronskeni disi konnasyoro basyaala alafasi.Moksi kon na wan a meti disi streikibri ensrefi wantron, èn a o lowe franoiti. Efu te a sneki gwe a no meki esigaw. Kofurai na wan takrudu Kronsneki ini a birti de tan pi tiri tnapu, truabra a sneki tron safri ensrefi; dati de a momenti fu libi a meti kodososo.
 
 Waigwe noso kibrinaki fu wan beti abra naki a ede fu a sneki gawgaw naini wan fukrafana soleki ini a kino yu kan vergiti. Faonomo ipi sneki gersi leki den loli, nomo den kan sutu na fesi trangagaw nanga beti, trubaka den sutubaka èn wakti te a katibo ben dorodoro landede. A landede konnasyoro abradati a frikefti de wan neurotoxine, san abi wan cholinesterase-rem inisei,
 dati de wan frowa fu bokun a ondrumakandra sutufaya(firi) mindri a senwe nanga prititei.
