A '''Daguwesneki''' (Boa constrictor)<'''Rediteredagwesneki'''> de wan te dri mitri langa tyokrosneki fu a papasneki nomo gadosneki famiri(Boidae).A de wan fu a pikinso kowrubrudu bubaskinsortu pefu a lerisabifasi nen 'Boa constrictor' alasabifasi de

--- a/Daguwesneki.mw
+++ b/Daguwesneki.mw
@@ -1,5 +1,4 @@
-
-A '''Daguwesneki''' (Boa constrictor)de wan te dri mitri langa tyokrosneki fu a papasneki nomo gadosneki famiri(Boidae).A de wan fu a pikinso kowrubrudu bubaskinsortu pefu a lerisabifasi nen 'Boa constrictor' alasabifasi de èn owktu 'Nederlandse' nen tron kebroiki. 
+A '''Daguwesneki''' (Boa constrictor)<'''Rediteredagwesneki'''> de wan te dri mitri langa tyokrosneki fu a papasneki nomo gadosneki famiri(Boidae).A de wan fu a pikinso kowrubrudu bubaskinsortu pefu a lerisabifasi nen 'Boa constrictor' alasabifasi de èn owktu 'Nederlandse' nen tron kebroiki. 
 Abra a buskondresma anbegi en nanga a Inca's grani en leki en de wan fu a moro santa meti, Fudrape a nen '''Gado'''''sneki'' kmopope.
 ________________________________________________________________________________________________
 
