/* Sistema fua Elementi */

--- a/Sistema_fua_elementi.mw
+++ b/Sistema_fua_elementi.mw
@@ -1,9 +1,9 @@
 == Sistema fua Elementi == 
 _______________________________________________________________________________________________
-# Watraskotriki (H)
-# Helimi      (He)
-# Letimi      (Li)
-# Berilimi    (Be)
+# Wâtrâskôtrîkî (H)
+# Hèlîmî      (He)
+# Lètîmî      (Li)
+# Berîlîmî    (Be)
 # Berimi      (B)
 # Koroskotriki(N)
 # Swaskotriki (O)
