/* Sîstèmâ fuâè èlèmèntî */

--- a/Sîstèmâ_fuâè_èlèmèntî.mw
+++ b/Sîstèmâ_fuâè_èlèmèntî.mw
@@ -3,14 +3,14 @@ ________________________________________________________________________________
 # Wâtrâskôtrîkî (H)
 # Hèlîmî      (He)
 # Lètîmî      (Li)
-# Berîlîmî    (Be)
-# Berimi      (B)
-# Koroskotriki(N)
-# Swaskotriki (O)
-# Fluorimi    (F)
-# Neoni       (Ne)
-# Natrimi     (Na)
-# Magnesimi   (Mg)
+# Bèrîlîmî    (Be)
+# Bèrîmî      (B)
+# Kôrôskôtrîkî(N)
+# Swîskôtrîkî (O)
+# Fluôrîmî    (F)
+# Neônî       (Ne)
+# Nâtrîmî     (Na)
+# Mâgnèsîmî   (Mg)
 # Aluminimi   (AL)
 # Silisimi    (Si)
 # Fosforimi   (P)
