/* Sîstèmâ fuâè èlèmèntî */

--- a/Sîstèmâ_fuâè_èlèmèntî.mw
+++ b/Sîstèmâ_fuâè_èlèmèntî.mw
@@ -116,3 +116,5 @@ ________________________________________________________________________________
 # Ununheksimi (Uuh)
 # Unumseptimi (Uus)
 # Ununoktimi  (Uuo)
+
+[[Combowortu]]
