/* Sapaa cepezop uojvas Msautvas vaaj */

--- a/Blacklanguage.mw
+++ b/Blacklanguage.mw
@@ -21,3 +21,24 @@
 # Aangaande = oophoopbax
 # Aangelegenheid = oophajahapfasi
 # Aangenaam = oophapoon
+# Aangezicht = oophabydkv
+# Aangezien = oophabyap
+# Aanlangen = oopjophmi
+# Aanlengen = oopjaphmi
+# Aanmatigen = oopnovyhmi
+# Aanrand = oopsopc
+# Aanranden = oopsopcmi
+# Aanschijn = ooptdkyfp
+# Aanstalt = ooptvojv
+# Aanstalten = ooptvojvmi
+# Aantal = oopvoj
+# Aantijgen = oopvyfhmi
+# Aanvaar = oopzoos
+# Aanvaard = oopzoosba
+# Aanvaarden = oopzoosbami
+# Aanvaaring = oopzooskro
+# Aanval = oopzoj
+# Aanvallig = oopzojjden
+# Aanvang = oopzoph
+# Aanvangen = oopzophmi
+# Aanwezig = oopuabden
