/* Sapaa cepezop uojvas Msautvas vaaj */

--- a/Blacklanguage.mw
+++ b/Blacklanguage.mw
@@ -42,3 +42,18 @@
 # Aanvang = oopzoph
 # Aanvangen = oopzophmi
 # Aanwezig = oopuabden
+# Aap = ooq
+# Aar = oos
+# Aard = oosc
+# Aardappel = ooscaoqqaj
+# Aardbei = ooscamay
+# Aarde = oosca
+# Aardig = ooscaden
+# Aardrijkskunde = ooscadepvsaflipca
+# Aars = oosv
+# Aarts- = ooscavt-
+# Aarzelen = cosvajap; losvajap; qosajap; soptajap; uossajap; oosbajden
+# Aas = oot; jelnyccaj; jeloot 
+# Abatoir = omoveys; eqapmoos tjodkkiyt.
+# Abces = omdat
+# Abnormaal = ompesnooj
