/* Sapaa cepezop uojvas Msautvas vaaj */

--- a/Blacklanguage.mw
+++ b/Blacklanguage.mw
@@ -52,8 +52,36 @@
 # Aardrijkskunde = ooscadepvsaflipca
 # Aars = oosv
 # Aarts- = ooscavt-
-# Aarzelen = cosvajap; losvajap; qosajap; soptajap; uossajap; oosbajden
+# Aarzelen = cosvajap; losvajap; qosajap; soptajap; uossajap; oosbajden.
 # Aas = oot; jelnyccaj; jeloot 
 # Abatoir = omoveys; eqapmoos tjodkkiyt.
 # Abces = omdat
 # Abnormaal = ompesnooj
+# Abortus = omesvit
+# Abracadabra = tyntojomyn; omsodocomso; kehitqelit.
+# Abrikoos = omsyleet
+# Abrupt = omsiqv
+# Absent = omtapv
+# Absint = omtypv
+# Absolutie = omtejidyo
+# Absoluut = omtejiiv
+# Absorberen = omtesmasmi
+# Abstract = omtvsodv
+# Absurd = omtisc
+# Abuis = omiyt
+# Acacia = ododyo
+# Academie = odocanya
+# Accijns = oddyfpt
+# Accordeon = oddescaep
+# Accu = oddi; movvasyf
+# Ach = odk
+# Acht = odkv
+# Achten = odkvap
+# Achten = odkvmi
+# Achter = odkvas
+# Achterbaks = odkvasmolt
+# Achterdocht = odkvascedkv
+# Achterstallig = odkvastvojjden
+# Achterwege = odkvasuaha
+
+# Acteur = odvais
