/* Sapaa cepezop uojvas Msautvas vaaj */

--- a/Blacklanguage.mw
+++ b/Blacklanguage.mw
@@ -83,5 +83,16 @@
 # Achterdocht = odkvascedkv
 # Achterstallig = odkvastvojjden
 # Achterwege = odkvasuaha
-
+# -achtig = -solekiden; -odkvyh
+# Acre = odsa
+# Acrobaat = odsemoov
 # Acteur = odvais
+# Actueel = odviaaj
+# Accupunctuur = oddiqipdviis
+# Acuut = odiiv
+# Adamsappel = ocontoqqaj
+# Adder = occas; ocsa.
+# Adel = ocaj
+# Adelaar = ocajoos; ocajrm
+# Adelijk = ocajyfl; ocajka
+# Adem = ocan
