/* Sapaa cepezop uojvas Msautvas vaaj */

--- a/Blacklanguage.mw
+++ b/Blacklanguage.mw
@@ -95,4 +95,16 @@
 # Adel = ocaj
 # Adelaar = ocajoos; ocajrm
 # Adelijk = ocajyfl; ocajka
-# Adem = ocan
+# Adem = jazaptjidkv; otam; ocanvedkv; ocan. 
+# Ader = pash; mjeaczov; ocas; oos.
+# Admiraal = ocnysooj.
+# Adres = ueeptv; qetvocsat; ocsat.
+# Advies = oczyat; vyq; sooc; soochazkro; oopmazajkro.
+# Advocaat = oczedoov
+# Af = og 
+# Afdanken = ogcoplmi; ogcoplap.
+# Affodil = oggecyj
+# Affront = oggsepv; majacyhkro.
+# afgod = oghec; yceej.
+# Afgrijzen = oghsyfbap
+# Afgrond = oghsepc
