/* Sapaa cepezop uojvas Msautvas vaaj */

--- a/Blacklanguage.mw
+++ b/Blacklanguage.mw
@@ -108,3 +108,7 @@
 # afgod = oghec; yceej.
 # Afgrijzen = oghsyfbap
 # Afgrond = oghsepc
+# Afgunst = oghipnana
+# Aflaat = ogjoov
+# Aftands = ogvopcsosu; ogvopct.
+# Aftrekken = ogvsallmi; ogvsallap.
