*Empty MediaWiki Message*

--- a/Kownukronsneki.mw
+++ b/Kownukronsneki.mw
@@ -1,47 +1,4 @@
-A '''Kownukronsneki''' (''Ophiophagus hannah'') de a basyabigi frikeftisneki fua grontapu èn a di wan pisi fu a famiri Elapidae. A de a enkri sortu fu a rutu Ophiophagus.
-
-________________________________________________________________________________________________
- 
-
-== Sabimarki ==
-_____________________________________________________________________________________________
-
-A Kownukronsneki gro te nokulangafasi 5,8 mitri, ipi eksemprepisi tapu grontapu de mindri 3,5 èn 4,5 mitri langa. Solikifa ipi Kronsneki disi wan abi den karaktrimarki a powpi seifesiflebeflebe boiti a ede fu en.
-A kloru de broin te braka nanga basyaala wan leti sprepi tapu a bakabonyo fu a heri skin. 
-A bere fu a Kownukronsneki de weti nanga brakaflaka, espresi fu a kanti fu a seifesiflebeflebe.
-
-== Alasabi ==
-________________________________________________________________________________________________
-
-A nyansani funamku de tra sneki, owktu frikefti sortu, truabra a Kownukronsneki abi a bunnen fu afugado ini India fuleki tanbunyepimeti èn den anbegi en sosfrefi. A lerisabifasi rutunen "Ophiophagus" de bowfuklari fua Griekse wortu "ophis" (=sneki) èn "phagein" (=nyan),so disi na wanimarki fu disi sneki nyan tra sneki. Owktu den nyan smaradraco èn smara menameti. 
-A uma fu a kownukronsneki  bow wan nesi fu puti en eksi ini, sanfa aparti fu sneki. 
-Ini disi nesi den boro tutenti te fotenti eksi, trufu  e kon abrabaka siksitenti te aititenti dei a yonkupikin fu ben de awinsi mindri a feifinafotenti èn feifitenti cm langa kba.
-
-
-== Frikeftifasi ==
-______________________________________________________________________________________________
-
-Faonomo a sortu disi no wanleisi frumeki a basyatranga frikefti, Moro frikefti de a ''Taipan''  (''Oxyuranus microlepidotus''), a sneki disi inidresikwinsi angananga beti wan bigi ominifasi dati kan kiri wan nodresiyepisma; Nofotron a ominifasi dresikwinsi de kandede soleki fu tutenti libisma sosrefi. A sneki disi ne frede fu libisma, èn draienbaka labisma no musu ben frede fu a sneki disi(Taipan). Libisma no de kefalek fu a bigi sneki disi.Luktudisi a kronskeni disi konnasyoro basyaala alafasi.Moksi kon na wan a meti disi streikibri ensrefi wantron, èn a o lowe franoiti. Efu te a sneki gwe a no meki esigaw. Kofurai na wan takrudu Kronsneki ini a birti de tan pi tiri tnapu, truabra a sneki tron safri ensrefi; dati de a momenti fu libi a meti kodososo.
-
-Waigwe noso kibrinaki fu wan beti abra naki a ede fu a sneki gawgaw naini wan fukrafana soleki ini a kino yu kan vergiti. Faonomo ipi sneki gersi leki den loli, nomo den kan sutu na fesi trangagaw nanga beti, trubaka den sutubaka èn wakti te a katibo ben dorodoro landede. A landede konnasyoro abradati a frikefti de wan neurotoxine, san abi wan cholinesterase-rem inisei,
-dati de wan frowa fu bokun a ondrumakandra sutufaya(firi) mindri a senwe nanga prititei.
-
-== Onti ==
-_______________________________________________________________________________________________
-
-A Kronsneki disi no abi aparti ontisistema, èn a no abi feyanti. A Konukronsneki de immuun fu frikefti fu tra sneki, èn no fu frede noti. Efu a Kronsneki ben di ini strafoso, a tron nyan sneki owktu.
-A Kownukronsneki abi difrenti sortu sneki tapu en nyangtafra soleki  tra kronsneki èn sneki fu a [[Daguwesneki]]-famiri.
- 
-
-
-== Kmopopsa nanga osoafdaki ==
-________________________________________________________________________________________________
-
-A Kownukronsneki kmopopsa ini prati fu Zuidsei-Oostsei-Azië; India, Vietnam, Ondrosei-China, Maleisië, Indonesië èn a Filipijnen, no ini Sri-Lanka.
-A osoafdaki delibi fu  drei tumsi owktu natnati kontren ,nomo no ini afudreisabana soleki a Kronsneki fu Egipte(Naja haje),nomo ini bosubusi, weisabana èn bosubosisyoro nanga ipi pranibosi. Ini dyèns te a basyaalasortu a sneki disi noiti no kren wan bon- owktu fu netirostu  noiti.
- 
-________________________________________________________________________________________________
-
+Lyrsrhtdymjo
 
 Tra links:
 * [[Daguwesneki]]
