*Empty MediaWiki Message*

--- a/Monzón.mw
+++ b/Monzón.mw
@@ -44,4 +44,8 @@
 
 '''Monzón''' e ben wan minti ini a [[Spanyorokondre|Spanyoro]] provinsi [[Huesca]] ini a regio [[Aragón]] nanga e abi wan opoflaku fu 155,01 km². Ini [[2010]] o abi Almazán 17.115 man ini si. 
 
+[[Guru:Wp/srn]]
+[[Guru:Minti ini Spanyorokondre]]
+[[Guru:Presi]]
+
 [[es:Monzón (Huesca)]]
