/* Tin simnuni fu a ambaran sma. */

--- a/Srananambaransma.mw
+++ b/Srananambaransma.mw
@@ -32,3 +32,5 @@ Sranan Masra
 
 
 10.  Fu piraibun brisrefi èn sondro heifiri wansuma den kognokrafasini taipramisini dati ea wan simnu fu a ambaran wan.<br />
+
+[[Combowortu]]
