*Empty MediaWiki Message*

--- a/Monzón.mw
+++ b/Monzón.mw
@@ -42,7 +42,7 @@
 |sito =http://www.monzon.es/ monzon.es 
 }}
 
-'''Monzón''' e ben wan minti ini a [[Spanyorokondre|Spanyoro]] provinsi [[Huesca]] ini a regio [[Aragón]] nanga e abi wan opoflaku fu 155,01 km². Ini [[2010]] o abi Almazán 17.115 man ini si. 
+'''Monzón''' e ben wan minti ini a [[Spanyorokondre|Spanyoro]] provinsi [[Huesca]] ini a regio [[Aragón]] nanga e abi wan opoflaku fu 155,01 km². Ini [[2010]] o abi Monzón 17.115 man ini si. 
 
 [[Guru:Wp/srn]]
 [[Guru:Minti ini Spanyorokondre]]
