*Empty MediaWiki Message*

--- a/Koleradatra.mw
+++ b/Koleradatra.mw
@@ -1,7 +1,7 @@
-Wan Koloradatra de wan datra fu ben spesrutu ensrefi ini a koloradatri.
+Wan Koleradatra de wan datra fu ben spesrutu ensrefi ini a koleradatri.
 
-Wan difrenti mindri wan koloradatra èn wan koloraman de wan koloradatra ben abi wan lerisabiskoro fu datra-lerisabiskoro skoropapira. Trubaka a koloradatra ben abi spesrutu ensrefi ini yeyedatrasiki fu foyari. 
-Wan koloraman no kan fruskrifi datradresi,nomo wan koloradatra kan fruskrifi wan datradresi.
+Wan difrenti mindri wan koleradatra èn wan koleraman de wan koleradatra ben abi wan lerisabiskoro fu datra-lerisabiskoro skoropapira. Trubaka a koloradatra ben abi spesrutu ensrefi ini yeyedatrasiki fu foyari. 
+Wan koleraman no kan fruskrifi datradresi,nomo wan koleradatra kan fruskrifi wan datradresi.
 
 [[ar:طبيب نفسي]]
 [[cs:Psychiatr]]
