*Empty MediaWiki Message*

--- a/Dungrudum.mw
+++ b/Dungrudum.mw
@@ -1,4 +1,3 @@
-
 Losref sre srefi ini dungrudum , loda i ibsu ku braka. 
 I teigfuga harla en harlasma, trusu dèn gwe sin tekpresi bayakon dennenni dèn ini i ibsu efu presipi. 
 Wantanmba; nanagini isrefi ini wan wirbraka lunkwa, pe wanala feseinagi kifirikwa asrefkwa. 
@@ -9,3 +8,7 @@ Kumatu/dede/bonyolibi. Mwayewe/urtu/manati. Sinwertyadum hufnu kontroni rabsoigi
 I isalibi ku sinkumkbaulu , i uwuza i sumamu wuzani firi , harajnizu, neleki i isalibi balu fukumgikwa , i uwuza lubha ne moro fèn abratra wan fua ipi rabkugnuni ini trahumnuni kikwa/ede. 
 A kikwa dai yu a kanmekdummba gikwa fu firi. 
 Dungrudum kumpriprakwa i yeye soleki wan braka olo adati dukwa.
+
+
+
+* [[Combowortu]]
