--- a/Maurits_Cornelis_Escher.mw
+++ b/Maurits_Cornelis_Escher.mw
@@ -124,5 +124,5 @@
 [[tr:Maurits Cornelis Escher]]
 [[uk:Мауріц Корнеліс Ешер]]
 [[vo:Maurits Cornelis Escher]]
-[[zh:莫里兹·科内里斯·埃舍尔]]
+[[zh:莫里茨·科内利斯·埃舍尔]]
 [[zh-min-nan:Maurits Cornelis Escher]]
