*Empty MediaWiki Message*

--- a/Rusland.mw
+++ b/Rusland.mw
@@ -9,8 +9,8 @@
 |ARTIKEL-WAPPEN = 
 |WAHLSPRUCH = 
 |AMTSSPRACHE = 
-|HAUPTSTADT = 
-|REGIERUNGSSITZ =[[Moskva]]
+|Presiplusplus = [[Moskva]]
+|REGIERUNGSSITZ =
 |STAATSFORM = 
 |STAATSOBERHAUPT = Medvedew Dmitrij Anatoljewitch
 |REGIERUNGSCHEF = Putin Wladimir Wladimirowitch
@@ -25,18 +25,18 @@ Test2
 |BIP-ERWEITERT = <br/>
 Abs.<br/>
 Nom.
-|BIP/EINWOHNER = Test
-|HDI = Test
-|WÄHRUNG = Test
-|UNABHÄNGIGKEIT = Test
-|GRÜNDUNG = Test
-|NATIONALHYMNE = ''Test''
-|NATIONALFEIERTAG = Test
+|BIP/EINWOHNER = 
+|HDI = 
+|WÄHRUNG = 
+|UNABHÄNGIGKEIT = 
+|GRÜNDUNG = 
+|NATIONALHYMNE = 
+|NATIONALFEIERTAG = 
 |ZEITZONE = Test
-|KFZ-KENNZEICHEN = Test
-|INTERNET-TLD = Test
-|TELEFON-VORWAHL = Test
-|ANMERKUNGEN = Ãmerkungen
+|KFZ-KENNZEICHEN = 
+|INTERNET-TLD = 
+|TELEFON-VORWAHL = 
+|ANMERKUNGEN = 
 |BILD-LAGE = Russian_Federation_(orthographic_projection).svg
 |BILD1 = 
 |BILD2 = 
