*Empty MediaWiki Message*

--- a/Rusland.mw
+++ b/Rusland.mw
@@ -19,9 +19,7 @@
 | population_estimate_year = 2010
 
 |BEV-DICHTE = 
-|BIP = <br/>
-Test1<br/>
-Test2
+|BIP = 
 |BIP-ERWEITERT = <br/>
 Abs.<br/>
 Nom.
@@ -32,7 +30,7 @@ Nom.
 |GRÜNDUNG = 
 |NATIONALHYMNE = 
 |NATIONALFEIERTAG = 
-|ZEITZONE = Test
+|ZEITZONE = 
 |KFZ-KENNZEICHEN = 
 |INTERNET-TLD = 
 |TELEFON-VORWAHL = 
