*Empty MediaWiki Message*

--- a/AFC_Ajax.mw
+++ b/AFC_Ajax.mw
@@ -43,7 +43,7 @@ terza divisa=Sconosciuta|nome della terza divisa
 |coppe UEFA = 2
 |coppe Intercontinentali = 1
 |titoli internazionali=
-|colori=[[Gefre:600px Rosso e Bianco bordato di Nero con F al centro.png|20px]] [[Rosso]]-[[bianco]]
+|colori=[[Gefre:600px Bianco Rosso e Bianco.png|20px]]&nbsp;[[Bianco]]&nbsp;•&nbsp;[[Rosso]]
 |soprannomi= ''de Godenzonen'', ''Ajacieden'' <br />''Joden'', ''Amsterdammers'' 
 |sito=www.ajax.nl
 }}
