--- a/Kaw.mw
+++ b/Kaw.mw
@@ -31,14 +31,7 @@ Wan teli fu den umali pikinkaw e stey opo a bidrifi nanga e sey resi tu wan merk
 {{Flosi Grati}}
 <br>
 
-[[ca:Vaca]]
-[[de:Milchkuh]]
-[[en:Cow]]
-[[he:פרה]]
-[[it:Mucca]]
-[[nl:Koe (rundvee)]]
-[[pl:Krowa]]
-[[sv:Ko]]
+[[fr:Vache]]
 
 [[Category:Wp/srn]]
 [[Category:Bobowatrameti]]
