Better photo added

--- a/Jehovah_Kotoigi.mw
+++ b/Jehovah_Kotoigi.mw
@@ -1,4 +1,4 @@
-[[Gefre:Watchtower headquarters.jpg|300px|right]]
+[[Gefre:Watchtower_Bible_%26_Tract_Society_(world_headquarters).jpg|300px|right]]
 
 '''Jehovah Kotoigi''' ben abi a disiten bigin foe den sensi 1870. Biginbigin sma ben kari den '''Bijbel Studenti'''. Ma na ini 1931 den ben teki a bijbel nen Jehovah Kotoigi. Foe wan pikin bigin na organisגsi gro kon abi miljoenmiljoen Kotoigi di e preiki fajafaja na moro leki 230 kondre.
 
