*Empty MediaWiki Message*

--- a/Hebe_Camargo.mw
+++ b/Hebe_Camargo.mw
@@ -1,5 +1,5 @@
 [[Gefre:Hebe Camargo 3.jpg|thumb|160px|Hebe Camargo]]
-'''Hebe Maria Camargo''' (1929 – ) ben wan Brasiliani aktori.
+'''Hebe Maria Camargo''' ([[Taubaté]], [[8 fostri]] [[1929]] – ) ben wan [[Brasilkondre|Brasiliani]] aktori.
 
 {{stub}}
 
