*Empty MediaWiki Message*

--- a/Japan.mw
+++ b/Japan.mw
@@ -4,7 +4,7 @@
 | common_name              = Japan
 | image_flag               = Flag of Japan.svg
 | image_coat               = Imperial Seal of Japan.svg
-| image_map                = LocationJapan.svg
+| image_map                = Japan-location-cia.gif
 | official_languages       = [[Japans]]
 | capital                  = [[Tokyo]]
 | latd=5 |latm=50 |latNS=N |longd=55 |longm=10 |longEW=W
