--- a/Bakrakondre.mw
+++ b/Bakrakondre.mw
@@ -8,7 +8,7 @@
 |map_caption = 
 |national_motto              = <span style="line-height:133%;">''"Je maintiendrai"''{{spaces|2}}<small>([[French language|French]])</small><br />''"Ik zal handhaven"''{{spaces|2}}<small>([[Dutch language|Dutch]])<br />"I shall stand fast"<sup>1</sup></span>
 |national_anthem             = "''[[Het Wilhelmus]]''"
-|official_languages          = [[Bakratongo]] <!-- ³ Do not add Frisian here, see the talk page discussion. -->
+|official_languages          = [[Bakratongo]], [[Frisitongo]], [[Ingristongo]]
 |ethnic_groups               = 80.9% [[Dutch (ethnic group)|Dutch]]<br />19.1% various others
 |ethnic_groups_year          = 
 |demonym                     = Dutch
