*Empty MediaWiki Message*

--- a/Ropa.mw
+++ b/Ropa.mw
@@ -1,4 +1,4 @@
-[[Gefre:LocationEurope.png|thumb|Ropa nanga dysi lokasi]]
+[[Gefre:LocationEurope.png|thumb|250px|Ropa nanga dysi lokasi]]
 '''Ropa''' efu '''eRopa''' ben wan doti opo [[aldoti]]. A flaku ben fu wan kondre fu 10.600.000 km². Ropa abi son 800.000.000 man ini sin. Ropa stersi fu a Atlanti tu a Oralbergi nanga a heypol tu a Mediterane.
 
 == Stori ==
@@ -63,9 +63,9 @@ eRopa ben abroften si leki a pasa gran kontinent wan teknologi, sabi nanga sofor
 |}
 
 == Tongo ==
-[[Gefre:Simplified Languages of Europe map.svg|thumb|250px|right|Ropa]]
-[[Gefre:Grossgliederung Europas.png|thumb|300px|Ropa]]
-[[Gefre:First.Crusade.Map.jpg|thumb|Ropa; [[1000]].]]
+[[Gefre:Rectified Languages of Europe map.png|thumb|250px|right|Ropa]]
+[[Gefre:Grossgliederung Europas.png|thumb|250px|Ropa]]
+[[Gefre:First.Crusade.Map.jpg|thumb|250px|Ropa; [[1000]].]]
 Ropa efu owru doti abi pasa owru [[tongo]] nanga nyon tongo. Moso tongo ini Ropa ben [[Indo Ropatongo|Indo Ropask]]. A skartumato fu den tongo fu Ropa ben leki disi:
 * [[Altaitongo|Altaisk]]
 ** [[Mogolitongo (guru)|Mogol(i)sk]]
