--- a/Le_Corbusier.mw
+++ b/Le_Corbusier.mw
@@ -77,6 +77,7 @@
 [[mr:ल कॉर्बूझीये]]
 [[ms:Le Corbusier]]
 [[nah:Le Corbusier]]
+[[nap:Le Corbusier]]
 [[new:ले कोर्बुसिएर्]]
 [[nl:Le Corbusier]]
 [[nn:Le Corbusier]]
