--- a/Indiakondre.mw
+++ b/Indiakondre.mw
@@ -31,8 +31,6 @@
 [[Guru:Kondre]]
 [[Guru:Asi]]
 
-[[kbd:Индиэ]]
-
 [[ace:India]]
 [[af:Indië]]
 [[als:Indien]]
@@ -101,7 +99,7 @@
 [[gd:Na h-Innseachan]]
 [[gl:India - भारत]]
 [[glk:هند]]
-[[got:𐌹𐌽𐌳𐌹𐌰]]
+[[got:𐌹𐌽𐌳𐌹𐌰/India]]
 [[gu:ભારત]]
 [[gv:Yn Injey]]
 [[ha:Indiya]]
@@ -128,6 +126,7 @@
 [[jbo:xingu'e]]
 [[jv:India]]
 [[ka:ინდოეთი]]
+[[kbd:Индиэ]]
 [[kg:India]]
 [[kk:Үндістан]]
 [[km:ឥណ្ឌា]]
