*Empty MediaWiki Message*

--- a/Pasuni_fu_Brokopondo.mw
+++ b/Pasuni_fu_Brokopondo.mw
@@ -27,7 +27,7 @@
 	
 {{Distrikt fu Sranankondre}}
 
-[[Guru:Distrikt fu Sranankondre|Brokopondo]]
+[[Guru:Pasuni fu Sranankondre|Brokopondo]]
 
 [[ar:مقاطعة بروكوبوندو]]
 [[da:Brokopondo]]
