*Empty MediaWiki Message*

--- a/Pasuni_fu_Commewijne.mw
+++ b/Pasuni_fu_Commewijne.mw
@@ -28,7 +28,7 @@
 
 {{Distrikt fu Sranankondre}}	
 
-[[Guru:Distrikt fu Sranankondre|Commewijne]]
+[[Guru:Pasuni fu Sranankondre|Commewijne]]
 
 [[ar:مقاطعة كوميويجني]]
 [[ca:Districte de Commewijne]]
