*Empty MediaWiki Message*

--- a/Pasuni_fu_Coronie.mw
+++ b/Pasuni_fu_Coronie.mw
@@ -24,7 +24,7 @@
 	
 {{Distrikt fu Sranankondre}}
 
-[[Guru:Distrikt fu Sranankondre|Coronie]]	
+[[Guru:Pasuni fu Sranankondre|Coronie]]	
 
 [[ar:مقاطعة كوروني]]
 [[da:Coronie]]
