*Empty MediaWiki Message*

--- a/Pasuni_fu_Marowijne.mw
+++ b/Pasuni_fu_Marowijne.mw
@@ -29,7 +29,7 @@
 
 {{Distrikt fu Sranankondre}}
 
-[[Guru:Distrikt fu Sranankondre|Marowijne]]
+[[Guru:Pasuni fu Sranankondre|Marowijne]]
 
 [[ar:مقاطعة مارويجيني]]
 [[da:Marowijne]]
