*Empty MediaWiki Message*

--- a/Pasuni_fu_Nickerie.mw
+++ b/Pasuni_fu_Nickerie.mw
@@ -26,7 +26,7 @@
 	
 {{Distrikt fu Sranankondre}}
 
-[[Guru:Distrikt fu Sranankondre|Nickerie]]	
+[[Guru:Pasuni fu Sranankondre|Nickerie]]	
 
 [[ar:مقاطعة نيكيري]]
 [[da:Nickerie]]
