*Empty MediaWiki Message*

--- a/Pasuni_fu_Para.mw
+++ b/Pasuni_fu_Para.mw
@@ -26,7 +26,7 @@
 	
 {{Distrikt fu Sranankondre}}	
 
-[[Guru:Distrikt fu Sranankondre|Para]]
+[[Guru:Pasuni fu Sranankondre|Para]]
 
 [[ar:مقاطعة بارا]]
 [[da:Para (distrikt)]]
