*Empty MediaWiki Message*

--- a/Pasuni_fu_Paramaribo.mw
+++ b/Pasuni_fu_Paramaribo.mw
@@ -33,7 +33,7 @@
 	
 {{Distrikt fu Sranankondre}}	
 
-[[Guru:Distrikt fu Sranankondre|Paramaribo]]
+[[Guru:Pasuni fu Sranankondre|Paramaribo]]
 
 [[ar:مقاطعة باراماريبو]]
 [[da:Paramaribo (distrikt)]]
