*Empty MediaWiki Message*

--- a/Pasuni_fu_Saramacca.mw
+++ b/Pasuni_fu_Saramacca.mw
@@ -27,7 +27,7 @@
 	
 {{Distrikt fu Sranankondre}}	
 
-[[Guru:Distrikt fu Sranankondre|Saramacca]]
+[[Guru:Pasuni fu Sranankondre|Saramacca]]
 
 [[ar:مقاطعة ساراماكا]]
 [[da:Saramacca]]
