*Empty MediaWiki Message*

--- a/Pasuni_fu_Sipaliwini.mw
+++ b/Pasuni_fu_Sipaliwini.mw
@@ -27,7 +27,7 @@
 
 {{Distrikt fu Sranankondre}}	
 
-[[Guru:Distrikt fu Sranankondre|Sipaliwini]]
+[[Guru:Pasuni fu Sranankondre|Sipaliwini]]
 
 [[ar:مقاطعة سيباليويني]]
 [[da:Sipaliwini]]
