*Empty MediaWiki Message*

--- a/Pasuni_fu_Wanica.mw
+++ b/Pasuni_fu_Wanica.mw
@@ -28,7 +28,7 @@
 
 {{Distrikt fu Sranankondre}}	
 
-[[Guru:Distrikt fu Sranankondre|Wanica]]
+[[Guru:Pasuni fu Sranankondre|Wanica]]
 
 [[ar:مقاطعة وانيكا]]
 [[da:Wanica]]
