*Empty MediaWiki Message*

--- a/Pasuni_fu_Sranankondre.mw
+++ b/Pasuni_fu_Sranankondre.mw
@@ -29,7 +29,7 @@ Pasuni fu [[Sranankondre]] ben 10:
 
 {{Distrikt fu Sranankondre}}
 
-[[Guru:Distrikt fu Sranankondre]]
+[[Guru:Pasuni fu Sranankondre]]
 
 [[en:Districts of Suriname]]
 [[es:Distritos de Surinam]]
