*Empty MediaWiki Message*

--- a/Pasuni_fu_Brokopondo.mw
+++ b/Pasuni_fu_Brokopondo.mw
@@ -14,7 +14,7 @@
 |pxMappa = 200	
 |noteMappa = 	
 }}	
-'''Brokopondo''' e ben [[Distrikt fu Sranankondre|distrikt]] fu [[Sranankondre]]. 	
+'''Brokopondo''' e ben [[Pasuni fu Sranankondre|pasuni]] fu [[Sranankondre]]. 	
 
 == Risorti ==
 [[File:Brokopondo_resorts.png|thumb|left|250px|Risorti fu Brokopondo]]
