*Empty MediaWiki Message*

--- a/Pasuni_fu_Commewijne.mw
+++ b/Pasuni_fu_Commewijne.mw
@@ -15,7 +15,7 @@
 
 |noteMappa = 	
 }}	
-'''Commewijne ''' e ben [[Distrikt fu Sranankondre|distrikt]] fu [[Sranankondre]]. 
+'''Commewijne ''' e ben [[Pasuni fu Sranankondre|pasuni]] fu [[Sranankondre]]. 
 
 == Risorti ==
 [[File:Commewijne resorts.png|300px|thumb|left|Risorti fu Commewijne]]
