--- a/Pasuni_fu_Coronie.mw
+++ b/Pasuni_fu_Coronie.mw
@@ -14,7 +14,7 @@
 |pxMappa = 200	
 |noteMappa = 	
 }}	
-'''Coronie ''' e ben [[Distrikt fu Sranankondre|distrikt]] fu [[Sranankondre]]. 	
+'''Coronie ''' e ben [[Pasuni fu Sranankondre|pasuni]] fu [[Sranankondre]]. 	
 
 == Risorti ==
 [[File:Coronie_resorts.png|thumb|left|250px|Risorti fu Coronie]]
