*Empty MediaWiki Message*

--- a/Pasuni_fu_Marowijne.mw
+++ b/Pasuni_fu_Marowijne.mw
@@ -14,7 +14,7 @@
 |pxMappa = 200
 |noteMappa = 
 }}
-'''Marowijne''' e ben [[Distrikt fu Sranankondre|distrikt]] fu [[Sranankondre]]. 
+'''Marowijne''' e ben [[Pasuni fu Sranankondre|pasuni]] fu [[Sranankondre]]. 
 
 
 
