--- a/Pasuni_fu_Nickerie.mw
+++ b/Pasuni_fu_Nickerie.mw
@@ -14,7 +14,7 @@
 |pxMappa = 200	
 |noteMappa = 	
 }}	
-'''Nickerie''' e ben [[Distrikt fu Sranankondre|distrikt]] fu [[Sranankondre]]. 	
+'''Nickerie''' e ben [[Pasuni fu Sranankondre|pasuni]] fu [[Sranankondre]]. 	
 
 == Risorti ==
 [[File:Nickerie_resorts.png|thumb|left|250px|Risorti fu Nickerie]]
