*Empty MediaWiki Message*

--- a/Pasuni_fu_Para.mw
+++ b/Pasuni_fu_Para.mw
@@ -14,7 +14,7 @@
 |pxMappa = 200	
 |noteMappa = 	
 }}	
-'''Para ''' e ben [[Distrikt fu Sranankondre|distrikt]] fu [[Sranankondre]]. 	 
+'''Para ''' e ben [[Pasuni fu Sranankondre|pasuni]] fu [[Sranankondre]]. 	 
 
 == Risorti ==
 [[File:Para resorts.png|thumb|left|Risorti fu Para]]
