*Empty MediaWiki Message*

--- a/Pasuni_fu_Paramaribo.mw
+++ b/Pasuni_fu_Paramaribo.mw
@@ -14,7 +14,7 @@
 |pxMappa = 200	
 |noteMappa = 	
 }}	
-'''Paramaribo''' e ben [[Distrikt fu Sranankondre|distrikt]] fu [[Sranankondre]].
+'''Paramaribo''' e ben [[Pasuni fu Sranankondre|pasuni]] fu [[Sranankondre]].
 
 == Risorti ==
 [[File:Resorts_in_Paramaribo,_Suriname_-_20061227.png|left|300px|thumb|Risorti fu Paramaribo]]
