--- a/Pasuni_fu_Saramacca.mw
+++ b/Pasuni_fu_Saramacca.mw
@@ -14,7 +14,7 @@
 |pxMappa = 200	
 |noteMappa = 	
 }}	
-'''Saramacca''' e ben [[Distrikt fu Sranankondre|distrikt]] fu [[Sranankondre]]. 	
+'''Saramacca''' e ben [[Pasuni fu Sranankondre|pasuni]] fu [[Sranankondre]]. 	
 
 == Risorti ==
 [[File:Saramacca resorts.png|thumb|left|250px|Risorti fu Saramacca]]
