--- a/Pasuni_fu_Sipaliwini.mw
+++ b/Pasuni_fu_Sipaliwini.mw
@@ -14,7 +14,7 @@
 |pxMappa = 200	
 |noteMappa = 	
 }}	
-'''Sipaliwini''' e ben [[Distrikt fu Sranankondre|distrikt]] fu [[Sranankondre]].
+'''Sipaliwini''' e ben [[Pasuni fu Sranankondre|pasuni]] fu [[Sranankondre]].
 
 == Risorti ==
 [[File:Sipaliwini_resorts.png|thumb|left|250px|Risorti fu Sipaliwini]]
