--- a/Pasuni_fu_Wanica.mw
+++ b/Pasuni_fu_Wanica.mw
@@ -14,7 +14,7 @@
 |pxMappa = 200	
 |noteMappa = 	
 }}	
-'''Wanica''' e ben [[Distrikt fu Sranankondre|distrikt]] fu [[Sranankondre]]. 
+'''Wanica''' e ben [[Pasuni fu Sranankondre|pasuni]] fu [[Sranankondre]]. 
 
 == Risorti ==
 [[File:Wanica_resorts.png|thumb|left|250px|Risorti fu Wanica]]
