*Empty MediaWiki Message*

--- a/Pasuni_fu_Brokopondo.mw
+++ b/Pasuni_fu_Brokopondo.mw
@@ -25,7 +25,7 @@
 * [[Marshallkreek]]
 * [[Sarakreek]]
 	
-{{Distrikt fu Sranankondre}}
+{{Pasuni fu Sranankondre}}
 
 [[Guru:Pasuni fu Sranankondre|Brokopondo]]
 
