*Empty MediaWiki Message*

--- a/Pasuni_fu_Commewijne.mw
+++ b/Pasuni_fu_Commewijne.mw
@@ -26,7 +26,7 @@
 * [[Nieuw Amsterdam]]
 * [[Tamanredjo]]
 
-{{Distrikt fu Sranankondre}}	
+{{Pasuni fu Sranankondre}}	
 
 [[Guru:Pasuni fu Sranankondre|Commewijne]]
 
