*Empty MediaWiki Message*

--- a/Pasuni_fu_Coronie.mw
+++ b/Pasuni_fu_Coronie.mw
@@ -22,7 +22,7 @@
 * [[Totness]]
 * [[Welgelegen]]
 	
-{{Distrikt fu Sranankondre}}
+{{Pasuni fu Sranankondre}}
 
 [[Guru:Pasuni fu Sranankondre|Coronie]]	
 
