*Empty MediaWiki Message*

--- a/Pasuni_fu_Marowijne.mw
+++ b/Pasuni_fu_Marowijne.mw
@@ -27,7 +27,7 @@
 * [[Patamacca]]
 * [[Wanhatti]]
 
-{{Distrikt fu Sranankondre}}
+{{Pasuni fu Sranankondre}}
 
 [[Guru:Pasuni fu Sranankondre|Marowijne]]
 
