*Empty MediaWiki Message*

--- a/Pasuni_fu_Nickerie.mw
+++ b/Pasuni_fu_Nickerie.mw
@@ -24,7 +24,7 @@
 * [[Wageningen]]
 * [[Westelijke Polders]]
 	
-{{Distrikt fu Sranankondre}}
+{{Pasuni fu Sranankondre}}
 
 [[Guru:Pasuni fu Sranankondre|Nickerie]]	
 
