*Empty MediaWiki Message*

--- a/Pasuni_fu_Paramaribo.mw
+++ b/Pasuni_fu_Paramaribo.mw
@@ -31,7 +31,7 @@
 * [[Weg naar Zee]]
 * [[Welgelegen]]
 	
-{{Distrikt fu Sranankondre}}	
+{{Pasuni fu Sranankondre}}	
 
 [[Guru:Pasuni fu Sranankondre|Paramaribo]]
 
