--- a/Pasuni_fu_Saramacca.mw
+++ b/Pasuni_fu_Saramacca.mw
@@ -25,7 +25,7 @@
 * [[Tijgerkreek]]
 * [[Wayamboweg]]
 	
-{{Distrikt fu Sranankondre}}	
+{{Pasuni fu Sranankondre}}	
 
 [[Guru:Pasuni fu Sranankondre|Saramacca]]
 
