--- a/Pasuni_fu_Sipaliwini.mw
+++ b/Pasuni_fu_Sipaliwini.mw
@@ -25,7 +25,7 @@
 * [[Kabalebo]]
 * [[Tapanahony]]
 
-{{Distrikt fu Sranankondre}}	
+{{Pasuni fu Sranankondre}}	
 
 [[Guru:Pasuni fu Sranankondre|Sipaliwini]]
 
