*Empty MediaWiki Message*

--- a/Pasuni_fu_Wanica.mw
+++ b/Pasuni_fu_Wanica.mw
@@ -26,7 +26,7 @@
 * [[Lelydorp]]
 * [[Saramacca Polder]]	
 
-{{Distrikt fu Sranankondre}}	
+{{Pasuni fu Sranankondre}}	
 
 [[Guru:Pasuni fu Sranankondre|Wanica]]
 
