r2.6.5) (Robot: gewijzigd: [[na:Terki]]

--- a/Turkiyakondre.mw
+++ b/Turkiyakondre.mw
@@ -58,6 +58,8 @@
 [[Guru:Asi]]
 [[Guru:Ropa]]
 
+[[xmf:თურქეთი]]
+
 [[ab:Ҭырқтәыла]]
 [[ace:Tureuki]]
 [[af:Turkye]]
@@ -183,7 +185,7 @@
 [[ms:Turki]]
 [[mt:Turkija]]
 [[mzn:تورکیه]]
-[[na:Turkey]]
+[[na:Terki]]
 [[nah:Turquia]]
 [[nap:Turchia]]
 [[nds:Törkie]]
@@ -258,7 +260,6 @@
 [[wo:Tirki]]
 [[wuu:土耳其]]
 [[xal:Түргүдин Орн]]
-[[xmf:თურქეთი]]
 [[yi:טערקיי]]
 [[yo:Túrkì]]
 [[zh:土耳其]]
