r2.6.5) (Robot: toegevoegd: [[sw:Mashahidi wa Yehova]]

--- a/Jehovah_Kotoigi.mw
+++ b/Jehovah_Kotoigi.mw
@@ -78,6 +78,7 @@ Na edekantoro foe Jehovah Kotoigi de na New York.
 [[sr:Јеховини сведоци]]
 [[ss:Fakazi baJehova]]
 [[sv:Jehovas vittnen]]
+[[sw:Mashahidi wa Yehova]]
 [[ta:யெகோவாவின் சாட்சிகள்]]
 [[th:พยานพระยะโฮวา]]
 [[tl:Mga Saksi ni Jehova]]
